--- a/assets/styles/components/form.css
+++ b/assets/styles/components/form.css
@@ -1,5 +1,5 @@
 /* stylelint-disable no-descending-specificity */
-
+/* stylelint-disable */
 
 /* Form
 ############################################################################ */
